--- a/app/assets/stylesheets/alchemy/toolbar.scss
+++ b/app/assets/stylesheets/alchemy/toolbar.scss
@@ -11,7 +11,6 @@
       margin: 0;
       display: inline-block;
       vertical-align: middle;
-      line-height: 5px;
     }
   }
 
@@ -46,7 +45,6 @@
   }
 
   .icon_button {
-    line-height: 26px;
 
     .icon {
       font-size: 1.25em;
